Fix custom blockchain notebook

--- a/notebooks/Custom blockchain.ipynb
+++ b/notebooks/Custom blockchain.ipynb
@@ -104,7 +104,7 @@
     "        self._initialize_pool(blockchain, pool, **kwargs)\n",
     "    \n",
     "    # Now let's define our concensus mechanism\n",
-    "    def _consensus_mechanism(self, miners, *args, **kwargs):\n",
+    "    def consensus_mechanism(self, miners, *args, **kwargs):\n",
     "        # We need to return a miner key, in our case our consensus mechanism is just a random choice\n",
     "        keys = list(miners.keys())\n",
     "        selected = choice(keys)\n",
@@ -112,7 +112,7 @@
     "        return selected\n",
     "    \n",
     "    # Also we need to define how we are going to pack the block\n",
-    "    def _pack_block(self, weights):\n",
+    "    def pack_block(self, weights):\n",
     "        # Just returning the new block\n",
     "        return MyCustomBlock(weights)\n"
    ]
