Fix: typos cifar10 notebook

--- a/notebooks/cifar-10.ipynb
+++ b/notebooks/cifar-10.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One important difference with a normal flex example is that the weight collection functions are not compatible with flex. In case that we want to use a flex built-in collection primitive or a custom one that we built for flex, we can adapt it to the blockchain environment using the function `collect_to_send_wrapper`."
+    "One important difference with a normal flex example is that the flex's weight collection functions are not compatible with flex-block. In case that we want to use a flex built-in collection primitive or a custom one that we built for flex, we can adapt it to the blockchain environment using the function `collect_to_send_wrapper`."
    ]
   },
   {
@@ -295,13 +295,13 @@
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
     "        pool.servers.map(deploy_server_model_pt, selected_clients)\n",
-    "        # Each selected client trains her model\n",
+    "        # Each selected client trains his model\n",
     "        selected_clients.map(train)\n",
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
     "        pool.aggregators.map(collect_client_diff, selected_clients)\n",
     "        pool.gossip()\n",
     "        pool.aggregate(fed_avg)\n",
-    "        # The aggregator send its aggregated weights to the server\n",
+    "        # The aggregator sends his aggregated weights to the server\n",
     "        pool.aggregators.map(set_aggregated_diff_weights_pt, pool.servers)\n",
     "        # Optional: clean-up unused memory\n",
     "        selected_clients.map(clean_up_models)"
