Updated custom blockchain

--- a/notebooks/Custom blockchain.ipynb
+++ b/notebooks/Custom blockchain.ipynb
@@ -30,8 +30,8 @@
     ")\n",
     "\n",
     "# We are going to use the train dataset for mining since we are supossed to learn from it too\n",
-    "train_diabetes = Dataset.from_numpy(X_train, y_train)\n",
-    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
+    "train_diabetes = Dataset.from_array(X_train, y_train)\n",
+    "federated_diabetes = FedDataDistribution.iid_distribution(train_diabetes, n_nodes=5)"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,20 +75,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create our custom BlockchainPool. This is done by inheriting from the `BlockchainPool` class (note also the type hinting here) and implementing the `__init__`, `_consensus_mechanism` and `_pack_block` methods. The `__init__` method should call the `_initialize_pool` method with a Blockchain and `FlexPool` of our choice. with the genesis block given as an argument, we can add more parameters through `**kwargs`. In our case we will create a `p2p_architecture` for the underlying pool and a genesis block with no weights. In Blockflex the underlying pool is used to define the clients and miners of the experiment, where the aggregator role would denote the miners of the network.\n",
+    "Now let's create our custom BlockchainPool. This is done by inheriting from the `BlockchainPool` class (note also the type hinting here) and implementing the `__init__`, `_consensus_mechanism` and `_pack_block` methods. The `__init__` method should call the `initialize_pool` method with a Blockchain and `FlexPool` of our choice. with the genesis block given as an argument, we can add more parameters through `**kwargs`. In our case we will create a `p2p_pool` for the underlying pool and a genesis block with no weights. In Blockflex the underlying pool is used to define the clients and miners of the experiment, where the aggregator role would denote the miners of the network.\n",
     "\n",
     "The `_consensus_mechanism` method defines the consensus mechanism of the network, that is, a function that should return which miner will pack the block and do the aggregation. Here miners is a dictionary of the form `{miner_id: miner}` where `miner_id` is the id of the miner and `miner` is a `FlexModel`. Remember that in fact this miners are the aggregators of the underlying pool. We can access the blockchain in this method and more information through `self.blockchain` or any other extra defined method. In our case we will just return a random miner.\n",
     "\n",
-    "Finally, the `_pack_block` method defines how the block is packed. Here we should return a `Block` object with the weights of the model and any other information we want to store. In our case we will just return a `MyCustomBlock` with the weights of the model."
+    "Finally, the `pack_block` method defines how the block is packed. Here we should return a `Block` object with the weights of the model and any other information we want to store. In our case we will just return a `MyCustomBlock` with the weights of the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flexBlock.pool import BlockchainPool\n",
+    "from flexBlock.pool import BlockchainPool, PoolConfig\n",
     "from flex.data import FedDataset\n",
     "from flex.pool import FlexPool\n",
     "from typing import Callable\n",
@@ -97,11 +97,11 @@
     "class MyCustomBlockchainPool(BlockchainPool[MyCustomBlockchain]):\n",
     "    def __init__(self, flex_dataset: FedDataset, init_func: Callable, *args, **kwargs):\n",
     "        # First we are creating the underlying flex pool that will be managed\n",
-    "        pool = FlexPool.p2p_architecture(flex_dataset, init_func=init_func, *args, **kwargs)\n",
+    "        pool = FlexPool.p2p_pool(flex_dataset, init_func=init_func, *args, **kwargs)\n",
     "        # Then the blockchain with his custom genesis block\n",
     "        blockchain = MyCustomBlockchain(MyCustomBlock([]))\n",
     "        # WARNING: Always call self._initialize_pool()\n",
-    "        self._initialize_pool(blockchain, pool, **kwargs)\n",
+    "        self.initialize_pool(blockchain, pool,config=PoolConfig(aggregate_before_acc=True, gossip_before_agg=False), **kwargs)\n",
     "    \n",
     "    # Now let's define our concensus mechanism\n",
     "    def consensus_mechanism(self, miners, *args, **kwargs):\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "import copy\n",
     "\n",
-    "from flexBlock.pool import send_weights_to_miner\n",
+    "from flexBlock.pool import send_weights_to_miner, deploy_miner_model\n",
     "\n",
     "@aggregate_weights\n",
     "def aggregate(list_of_weights: list):\n",
@@ -158,14 +158,14 @@
     "    return flex_model\n",
     "\n",
     "\n",
-    "@deploy_server_model\n",
+    "@deploy_miner_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
     "    return copy.deepcopy(server_flex_model)\n",
     "\n",
     "@set_aggregated_weights\n",
     "def set_weights_to_server_model(server_flex_model: FlexModel, aggregated_weights):\n",
-    "    server_flex_model[\"model\"].intercept_ = aggregated_weights[0][0]\n",
-    "    server_flex_model[\"model\"].coef_ = aggregated_weights[0][1]"
+    "    server_flex_model[\"model\"].intercept_ = aggregated_weights[0]\n",
+    "    server_flex_model[\"model\"].coef_ = aggregated_weights[1]"
    ]
   },
   {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,25 +219,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected miner: 3\n",
-      "Selected miner: 4\n",
-      "Selected miner: 4\n",
       "Selected miner: 4\n",
       "Selected miner: 1\n",
-      "Selected miner: 0\n",
-      "Selected miner: 2\n",
-      "Selected miner: 3\n",
       "Selected miner: 1\n",
-      "Selected miner: 1\n"
+      "Selected miner: 1\n",
+      "Selected miner: 0\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(10):\n",
+    "for _ in range(5):\n",
     "    servers.map(copy_server_model_to_clients, clients)\n",
     "    clients.map(train)\n",
     "    aggregators.map(get_clients_weights, clients)\n",
-    "    p.aggregate(aggregate)\n",
+    "    p.aggregate(aggregate, set_weights=set_weights_to_server_model)\n",
     "    aggregators.map(set_weights_to_server_model, servers)"
    ]
   }
