--- a/notebooks/cifar-10.ipynb
+++ b/notebooks/cifar-10.ipynb
@@ -73,7 +73,6 @@
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "from flexBlock.pool import PoSBlockchainPool\n",
     "from flex.pool import init_server_model\n",
@@ -148,14 +147,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One important difference with a normal flex example is that the flex's model deploy functions are not compatible with flex-block. In case that we want to use a flex built-in collection primitive or a custom one that we built for flex, we can adapt it to the blockchain environment using the function `deploy_server_to_miner`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flex.pool import deploy_server_model_pt\n",
+    "from flexBlock.pool.primitives import deploy_server_to_miner\n",
     "\n",
-    "servers.map(deploy_server_model_pt, selected_clients)"
+    "deploy_func = deploy_server_to_miner(deploy_server_model_pt)\n",
+    "\n",
+    "servers.map(deploy_func, selected_clients)"
    ]
   },
   {
@@ -222,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One important difference with a normal flex example is that the flex's weight collection functions are not compatible with flex-block. In case that we want to use a flex built-in collection primitive or a custom one that we built for flex, we can adapt it to the blockchain environment using the function `collect_to_send_wrapper`."
+    "As in the case of model deploy functions, the flex's weight colleciton functions are not compatible with flex-block. In case that we want to use a flex built-in collection primitive or a custom one that we built for flex, we can adapt it to the blockchain environment using the function `collect_to_send_wrapper`."
    ]
   },
   {
@@ -244,9 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the weights need to be shared between miners. In a real life scenario this would be done through a gossip mechanishm between miners, we can archieve this by calling the `flex_pool.gossip` method. Then, we are ready to mine a block, this is done as part of the aggregate step. The `aggregate` method will run the consensus mechanism for our architecture (in our case, proof of stake) and the winner miner will run the given aggregation function. In this case, we are using a simple average.\n",
-    "\n",
-    "Finally, we can update the weights of the clients and repeat the process."
+    "Now we are ready to mine a block, this is done as part of the aggregate step. The `aggregate` method will run the consensus mechanism for our architecture (in our case, proof of stake) and the winner miner will run the given aggregation function. In this case, we are using a simple average. Also the servers will get their model updated as a part of the aggregation process. This means that we also need to specify how to update the server model. In this case we will use a primitive already available in flex."
    ]
   },
   {
@@ -255,10 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import fed_avg\n",
+    "from flex.pool import fed_avg, set_aggregated_diff_weights_pt\n",
     "\n",
-    "flex_pool.gossip()\n",
-    "flex_pool.aggregate(fed_avg)"
+    "flex_pool.aggregate(fed_avg, set_aggregated_diff_weights_pt)"
    ]
   },
   {
@@ -274,8 +280,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool import set_aggregated_diff_weights_pt, deploy_server_model_pt\n",
-    "\n",
     "# Auxiliar function to clear unused gpu mem in clients\n",
     "def clean_up_models(client_model: FlexModel, _):\n",
     "    import gc\n",
@@ -294,15 +298,13 @@
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
-    "        pool.servers.map(deploy_server_model_pt, selected_clients)\n",
+    "        pool.servers.map(deploy_func, selected_clients)\n",
     "        # Each selected client trains his model\n",
     "        selected_clients.map(train)\n",
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
     "        pool.aggregators.map(collect_client_diff, selected_clients)\n",
     "        pool.gossip()\n",
-    "        pool.aggregate(fed_avg)\n",
-    "        # The aggregator sends his aggregated weights to the server\n",
-    "        pool.aggregators.map(set_aggregated_diff_weights_pt, pool.servers)\n",
+    "        pool.aggregate(fed_avg, set_aggregated_diff_weights_pt)\n",
     "        # Optional: clean-up unused memory\n",
     "        selected_clients.map(clean_up_models)"
    ]
