--- a/notebooks/Proof of federated learning MNIST.ipynb
+++ b/notebooks/Proof of federated learning MNIST.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a Proof of Federated Learning for the MNIST dataset\n",
+    "\n",
+    "In this notebook we will use a Proof of Federated Learning (PoFL) blockchain architecture to train a model on the MNIST dataset. PoFL is a consensus mechanism designed for federated learning, contrary to traditional consensus mechanism such as Proof of Work (PoW) or Proof of Stake (PoS) which are designed for a generic blockchain. This notebook will be straightforward since we will not dive into the implementation of PoFL in `flexBlock`. \n",
+    "\n",
+    "### How does PoFL work?\n",
+    "In a PoFL blockchain, we must differentiate between two types of nodes: the miners and the clients. The miners are responsible for creating new blocks, running the consensus mechanism and validating the blocks. The clients are the data owners, they are the ones who train the model. Every client is allocated to a miner, and each miner with its clients will act as an independent pool. The miner with the best model (i.e. the model with the highest accuracy) will propagate its model to the other miners. The other miners will validate the model and if it is better than their own, they will accept it.\n",
+    "\n",
+    "\n",
+    "Let's start by writting some boilerplate code. We will use torch for the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,6 +25,13 @@
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {device}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to use the mnist dataset. In order to load the dataset, we can use the `load` function from flex which gives us access to federated datasets."
    ]
   },
   {
@@ -29,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will define the model and the function for init the servers models. This is standard `flex` code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,7 +69,6 @@
     "from flex.pool import init_server_model\n",
     "from flex.model import FlexModel\n",
     "\n",
-    "from flexBlock.pool import PoFLBlockchainPool\n",
     "\n",
     "\n",
     "class SimpleNet(nn.Module):\n",
@@ -67,7 +95,24 @@
     "    server_flex_model[\"criterion\"] = torch.nn.CrossEntropyLoss()\n",
     "    server_flex_model[\"optimizer_func\"] = torch.optim.Adam\n",
     "    server_flex_model[\"optimizer_kwargs\"] = {}\n",
-    "    return server_flex_model\n",
+    "    return server_flex_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it is time to create our pool. `flexBlock` has a ready-to-use implementation of PoFL. We just need to import it from the `pool` module and create a new instance of it. It requires a dataset, a function for initializing the models and the ammount of miners that we want in our blockchain. The clients will be split evenly between the miners."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from flexBlock.pool import PoFLBlockchainPool\n",
     "\n",
     "pool = PoFLBlockchainPool(fed_dataset=flex_dataset, init_func=build_server_model, number_of_miners=10)\n",
     "\n",
@@ -81,6 +126,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then define a function for deploying the miners (server) model to the clients. Since we are on `flexBlock` we will use the `deploy_miner_model` function from the `pool.decorators` module. If you have a function for doing this in `flex` remember that you can reuse it by wrapping it with the `deploy_server_to_miner_wrapper` function from the `pool.primitives` module."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -88,7 +140,7 @@
    "source": [
     "import copy\n",
     "\n",
-    "from flexBlock.pool import deploy_miner_model\n",
+    "from flexBlock.pool.decorators import deploy_miner_model\n",
     "\n",
     "@deploy_miner_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
@@ -96,6 +148,13 @@
     "\n",
     "\n",
     "servers.map(copy_server_model_to_clients, clients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define an standard training function."
    ]
   },
   {
@@ -129,6 +188,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function for collecting our weights."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -140,6 +206,13 @@
     "def get_clients_weights(client_flex_model: FlexModel):\n",
     "    weight_dict = client_flex_model[\"model\"].state_dict()\n",
     "    return [weight_dict[name] for name in weight_dict]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And a function for updating the model."
    ]
   },
   {
@@ -157,6 +230,13 @@
     "        weight_dict = server_flex_model[\"model\"].state_dict()\n",
     "        for layer_key, new in zip(weight_dict, aggregated_weights):\n",
     "            weight_dict[layer_key].copy_(new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will need a function for evaluating the global model of each miner. This function will take the global model of each miner and compute the accuracy in the test set."
    ]
   },
   {
@@ -189,6 +269,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we define a training loop. When we call the `aggregate` method we see that we pass the `eval_function` for computing accuracy, the `eval_dataset` where we want to compute the accuracy and a threshold for the accuracy. We see that the `aggregate` method will return a boolean value indicating if we reached an aggregation, which means that at least one model has surpassed the threshold and by so communicated to the other miners, or not."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -210,6 +297,13 @@
     "        # The aggregador collects weights from the selected clients and aggregates them\n",
     "        pool.aggregators.map(get_clients_weights, selected_clients)\n",
     "        aggregated = pool.aggregate(fed_avg, set_agreggated_weights_to_server, eval_function=evaluate_global_model, eval_dataset=test_data, accuracy=acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can run our experiment."
    ]
   },
   {
@@ -238,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
